Added Swagger and tidied up the code/lint.

--- a/src/views/partials/footer.pug
+++ b/src/views/partials/footer.pug
@@ -2,8 +2,6 @@ footer.mt-5.py-4.border-top
   .container
     .row
       .col-md-6
-        p.mb-1.text-muted © #{new Date().getFullYear()} Spam Shield
-        small.text-muted Built with Express, Pug & Bootstrap 5.
+        p.mb-1.text-muted © #{new Date().getFullYear()} Headwall Hosting
       .col-md-6.text-md-end.mt-3.mt-md-0
-        a.me-3(href='https://github.com/spamshield' target='_blank') GitHub
-        a(href='https://twitter.com/spamshield' target='_blank') Twitter
+        a.me-3(href='https://github.com/headwalluk/spam-shield' target='_blank') GitHub
