--- a/src/views/partials/navbar.pug
+++ b/src/views/partials/navbar.pug
@@ -9,6 +9,8 @@ nav.navbar.navbar-expand-lg.navbar-dark.bg-dark
           a.nav-link(href='/') Home
         li.nav-item
           a.nav-link(href='/stats') Statistics
+        li.nav-item
+          a.nav-link(href='/docs') Docs
         if user
           li.nav-item
             a.nav-link(href='/dash') Dashboard
