--- a/src/views/pages/login.pug
+++ b/src/views/pages/login.pug
@@ -11,7 +11,6 @@ block content
         +formGroup('email', 'Email', 'email')
         +formGroup('password', 'Password', 'password')
         +submitRow('Sign in')
-      .mt-3.d-flex.flex-wrap.gap-2
-        a.btn.btn-outline-secondary.btn-sm(href='/register') Register
-        a.btn.btn-link.btn-sm(href='/reset-password') Reset password
-        a.btn.btn-link.btn-sm(href='/verify-email/resend') Resend verification email
+      .mt-3.d-flex.flex-row.justify-content-between
+        a(href='/reset-password') Reset password
+        a(href='/verify-email/resend') Resend verification email
